# ai-transcription

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  高層界たわまん_2026-04-21T17-26-24.comments.txt  高層界たわまん_2026-04-21T17-26-24.txt
scripts/: transcribe-ja.sh
src/: audio.rs  main.rs  transcribe.rs
